--- a/app/src/pages/inside/common/defectTypeSelector/defectTypeSelectorItem/defectTypeSelectorItem.scss
+++ b/app/src/pages/inside/common/defectTypeSelector/defectTypeSelectorItem/defectTypeSelectorItem.scss
@@ -30,7 +30,7 @@
   cursor: pointer;
 
   &:hover {
-    border: solid 1px $COLOR--darkmode-topaz-additional;
+    border: solid 1px $COLOR--darkmode-topaz-hover;
   }
 
   &.selected {
