--- a/app/src/pages/inside/stepPage/modals/makeDecisionModal/executionSection/optionsSection/optionsSection.scss
+++ b/app/src/pages/inside/stepPage/modals/makeDecisionModal/executionSection/optionsSection/optionsSection.scss
@@ -22,7 +22,7 @@
 
 .header {
   flex-shrink: 0;
-  color: $COLOR--dirty-gray;
+  color: $COLOR--darkmode-gray-100;
   font-size: 16px;
   line-height: 22px;
   padding-right: 12px;
