--- a/app/src/pages/inside/stepPage/modals/makeDecisionModal/tabs/selectDefectManually/actionButtonsBar/actionButtonsBar.scss
+++ b/app/src/pages/inside/stepPage/modals/makeDecisionModal/tabs/selectDefectManually/actionButtonsBar/actionButtonsBar.scss
@@ -23,5 +23,5 @@
   margin-top: 30px;
   font-family: $FONT-REGULAR;
   font-size: 13px;
-  color: $COLOR--dark-gray;
+  color: $COLOR--darkmode-gray-200;
 }
